<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Testgateway</string>
    <string name="action_settings">Settings</string>
    <string name="serialPort_check">串口连接状况</string>
    <string name="server_check">服务器连接状况</string>
    <string name="hello_world">Hello world!</string>
    <string name="serialPortSetting">串口设置</string>
    <string name="serverSetting">服务器设置</string>
    <string name="sinkSetting">节点设置</string>
    <string name="alertSetting">预警设置</string>
    <string name="powerSetting">电量设置:</string>
    <string name="musicSetting">音乐设置:</string>
    <string name="musicSelect">音乐选择</string>
    <string name="sinkCheck">节点信息</string>
    <string name="listNodeImage">节点图片</string>
    <string name="nodeId">节点ID</string>
    <string name="nodePower">节点电量</string>
    <string name="noData">没有数据</string>
    <string name="packageType">包类型</string>
    <string name="packageStatus">包状态</string>
    <string name="packageMessage">包内容</string>
    <string name="internetSetting">以太网设置</string>
    <string name="wifiSetting">wifi设置</string>
    <string name="dataCenter">数据中心</string>
    <string name="message">message</string>
    <string name="Ctype">Ctype</string>
    <string name="NodeID">NodeID</string>
    <string name="status">status</string>
    <string name="receivetime">receivetime</string>
    <string name="aboutUs">公司介绍</string>
    <string name="quit">退出</string>
    <string name="sendCycle">sink节点发包周期：</string>

    <string-array name="dev_path">
        <item>/dev/ttySAC0</item>
        <item>/dev/ttySAC1</item>
        <item>/dev/ttySAC2</item>
        <item>/dev/ttySAC3</item>
        <item>/dev/ttyUSB0</item>
        <item>/dev/ttyUSB1</item>
        <item>/dev/ttyUSB2</item>
    </string-array>
    <string-array name="nodeSettingCycle">
        <item>5秒</item>
        <item>10秒</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>2分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
    </string-array>
    <string-array name="powerSetting">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>30%</item>
        <item>35%</item>
        <item>40%</item>
    </string-array>

    <string name="title_activity_fragment_node_setting">Fragment_nodeSetting</string>
    <string name="title_activity_file_chooser">FileChooserActivity</string>
</resources>