<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/packageLeft"
        android:layout_width="300dp"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/packageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/packageType"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/packageStatus"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/packageMessage"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@id/packageTitle"
            android:layout_marginTop="5dp" >
        </ListView>

        <!--
             <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@id/packageTitle"
            android:layout_marginTop="5dp"
            android:text="@string/noData" />
        -->
    </RelativeLayout>

    <TextView
        android:id="@+id/packageRight"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@id/packageLeft"
        android:text="@string/hello_world">
    </TextView>

</RelativeLayout>